--- a/app/views/account/search.html.erb
+++ b/app/views/account/search.html.erb
@@ -1,9 +1,5 @@
 <h1>All users</h1>
 
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= user.username %>
-    </li>
-  <% end %>
+   <%= render 'follow_form' %>
 </ul>
