--- a/app/views/account/show.html.erb
+++ b/app/views/account/show.html.erb
@@ -1,2 +1,23 @@
 <h1>Hello! <%= current_user.username %></h1>
 <p>This is User Page.</p>
+
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1><%= current_user.username %></h1>
+    </section>
+    <section class="stats">
+      <%= render 'shared/stats' %>
+    </section>
+  </aside>
+  <div class="col-md-8">
+    <h3><%= @title %></h3>
+    <% @user.following.each do |user| %>
+    <table class="users follow">
+      <tr>
+        <td> <%= user.username %> </td>
+      </tr>
+    </table>
+    <% end %>
+  </div>
+</div>
