--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Account#index</h1>
-<p>This is the top page...?</p>
+<h1>LINEを目指したWebアプリ。</h1>
+<h2>1.LINEを目指して一週間で作成しました。</h2>
+<h2>2.認証はTwitterのみです。</h2>
+<h2>3.ごめんなさいプライバシーは保証しません。</h2>
+<h2>4.TwitterのIDがそのままアカウント名になります。</h2>
+<h2>5.テキストのみでのチャットになります。悪しからず。</h2>
