--- a/app/views/account/_follow_form.html.erb
+++ b/app/views/account/_follow_form.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
 <% @users.each do |user| %>
-<li> <%= user.username %> <li>
+<h3><%= user.username %></h3> 
 <div id="follow_form">
  <% if current_user.following?(user) %>
  <%= form_for(current_user.active_relationships.find_by(followed_id: user.id),
