--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -3,9 +3,5 @@
     <strong id="following" class="stat">
       <%= @user.following.count %>
     </strong>
-    following
-    <strong id="followers" class="stat">
-      <%= @user.followers.count %>
-    </strong>
-    followers
+    Friend's
 </div>
