--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -5,10 +5,10 @@
   <script type="text/javascript">
     var from_id = <%= message.from_id %>;
     var current_user_id = $('.message').data('session');
-    if(from_id == current_user_id){
-      $('p.' + <%= message.id %>).css('text-align','left');
-    }else{
+    if(current_user){
       $('p.' + <%= message.id %>).css('text-align','right');
+    }else{
+      $('p.' + <%= message.id %>).css('text-align','left');
     }
   </script>
 </div>
